Regression: Crash on Blender star in lite build #112052

Closed
opened 2023-09-06 20:47:06 +02:00 by Iliya Katushenock · 2 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.56

Blender Version
Broken: version: 4.0.0 Alpha, branch: Main, Commit hash: d99af958d7
Worked: (newest version of Blender that worked as expected)

Short description of error
See attached stack file.

Exact steps for others to reproduce the error

  1. Build lite blender.
  2. Open it.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.56 **Blender Version** Broken: version: 4.0.0 Alpha, branch: Main, Commit hash: d99af958d7f990427d663e7eea969deb152c7297 Worked: (newest version of Blender that worked as expected) **Short description of error** See attached stack file. **Exact steps for others to reproduce the error** 1. Build lite blender. 2. Open it.
Iliya Katushenock added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-06 20:47:07 +02:00
Member

Looks like it can't find theme when starting blender in lite build... interesting

Looks like it can't find theme when starting blender in lite build... interesting
Member

Unable to confirm the assert in debug build
@mod_moder hi, could you rebuild the install folder?
Have you altered the configs? Do you observe any problem in release build or when WITH_ASSERT_ABORT is OFF?

Unable to confirm the assert in debug build @mod_moder hi, could you rebuild the `install folder`? Have you altered the configs? Do you observe any problem in release build or when `WITH_ASSERT_ABORT` is OFF?
Pratik Borhade added
Status
Needs Info from Developers
and removed
Status
Needs Triage
labels 2023-09-07 06:50:29 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Needs Info from Developers
labels 2023-09-07 07:57:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112052
No description provided.