Fix #112052: Theme access asserts on startup

Resolve an issue where drawing the status-bar's report info could
assert on startup. This was probably caused by accessing theme colors
before drawing.

The reporter traced this back to [0] however I couldn't reproduce the
problem. Remove theme access from INFO_OT_reports_display_update as the
color has not been used since [1].

[0]: 6de294a1915217c4711def25532d3d4b728b84d1
[1]: 694bc4d040a8bf762284598e98bf0575549a3e1c